// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders as expected when passing a different theme 1`] = `
<body>
  <div>
    <label
      class="lab-toggle"
      for="test"
    >
      <input
        class="lab-toggle__input"
        id="test"
        name="test"
        type="checkbox"
      />
       
      <span
        class="lab-toggle__slider"
      />
    </label>
  </div>
</body>
`;

exports[`Toggle renders as expected when passing disabled as true 1`] = `
<body>
  <div>
    <label
      class="lab-toggle lab-toggle--disabled"
      for="test"
    >
      <input
        class="lab-toggle__input"
        disabled=""
        id="test"
        name="test"
        type="checkbox"
      />
       
      <span
        class="lab-toggle__slider"
      />
    </label>
  </div>
</body>
`;

exports[`Toggle renders with base props 1`] = `
<body>
  <div>
    <label
      class="lab-toggle"
      for="test"
    >
      <input
        class="lab-toggle__input"
        id="test"
        name="test"
        type="checkbox"
      />
       
      <span
        class="lab-toggle__slider"
      />
    </label>
  </div>
</body>
`;
